--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Project</title>
 </head>
 <body>
+    <div class="h1">
+        <h1>hello world</h1>
+        <p>ya du bist mein bruder</p>
+    </div>
+    <div class="h2">
+        <p>ich bin mahdi</p>
+        <p>mahdi rezainiya</p>
+        
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
