--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <p>ya du bist mein bruder</p>
     </div>
     <div class="h2">
-        <!-- <p>ich bin mahdi</p> -->
-        <!-- <p>mahdi rezainiya</p> -->
+        <p>ich bin mahdi</p>
+        <p>mahdi rezainiya</p>
     </div>
     <script src="app.js"></script>
 </body>
