--- a/index.html
+++ b/index.html
@@ -6,14 +6,39 @@
     <title>Project Javascript</title>
 </head>
 <body>
-    <div class="h1">
-        <h1>hello world</h1>
-        <p>ya du bist mein bruder</p>
-    </div>
-    <div class="h2">
-        <!-- <p>ich bin mahdi</p> -->
-        <!-- <p>mahdi rezainiya</p> -->
-    </div>
+    <!-- ______________________________________ -->
+    <!-- #classList -->
+    <h1 class="ako team zana">ako team</h1>
+    <h1 class="ako team zana"></h1>
+    <!-- <h1 class="ako team zana">ako team</h1>
+    <h1 class="ako team zana">ako team</h1>
+    <h1 class="ako team zana">ako team</h1> -->
+    <!-- ______________________________________ -->
+    <!-- #clasList.add() -->
+    <!-- <h1>ako team</h1> -->
+    <!-- ______________________________________ -->
+    <!-- #classList.remove() -->
+    <!-- <h1>ako team</h1> -->
+    <!-- ______________________________________ -->
+    <!-- #classList.toggle() -->
+    <!-- <h1>ako team</h1> -->
+    <!-- ______________________________________ -->
+    <!-- innerHTML and textContent -->
+    <!-- <h1></h1> -->
+    <!-- ______________________________________ -->
+    <!-- #innerText -->
+    <!-- <ul>
+        <li style="display: none">ako team</li>
+    </ul> -->
+    <!-- ______________________________________ -->
+    <!-- #setAttribute() -->
+    <!-- <h1>ako team</h1> -->
+    <!-- ______________________________________ -->
+    <!-- #getAttribute() -->
+    <!-- <h1 title="team">ako team</h1> -->
+    <!-- ______________________________________ -->
+    <!-- style -->
+    <!-- <h1>ako team</h1> -->
     <script src="app.js"></script>
 </body>
 </html>
