--- a/index.html
+++ b/index.html
@@ -4,41 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Javascript</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- ______________________________________ -->
-    <!-- #classList -->
-    <h1 class="ako team zana">ako team</h1>
-    <h1 class="ako team zana"></h1>
+    <!-- <h1 class="ako team zana">ako team</h1> -->
+    <!-- <h1 class="ako team zana"></h1> -->
     <!-- <h1 class="ako team zana">ako team</h1>
     <h1 class="ako team zana">ako team</h1>
     <h1 class="ako team zana">ako team</h1> -->
-    <!-- ______________________________________ -->
-    <!-- #clasList.add() -->
     <!-- <h1>ako team</h1> -->
-    <!-- ______________________________________ -->
-    <!-- #classList.remove() -->
     <!-- <h1>ako team</h1> -->
-    <!-- ______________________________________ -->
-    <!-- #classList.toggle() -->
     <!-- <h1>ako team</h1> -->
-    <!-- ______________________________________ -->
-    <!-- innerHTML and textContent -->
     <!-- <h1></h1> -->
-    <!-- ______________________________________ -->
-    <!-- #innerText -->
     <!-- <ul>
         <li style="display: none">ako team</li>
     </ul> -->
-    <!-- ______________________________________ -->
-    <!-- #setAttribute() -->
     <!-- <h1>ako team</h1> -->
-    <!-- ______________________________________ -->
-    <!-- #getAttribute() -->
     <!-- <h1 title="team">ako team</h1> -->
-    <!-- ______________________________________ -->
-    <!-- style -->
     <!-- <h1>ako team</h1> -->
+
+    <!-- <div>
+        <p id="one">mahdi</p>
+        <p>rezainiya</p>
+    </div>
+
+    <div id="two">
+        <p>mahdi</p>
+        <p>rezainiya</p>
+    </div>-->
+  
+    <!-- <div id="parent">
+      <div id="child">click me !</div>
+    </div> -->
+
+    <!-- <article id="article1" style="background-color: green">
+      article
+      <section style="background-color: blueviolet">
+        section
+        <div style="background-color: chocolate">div</div>
+      </section>
+    </article> -->
+
+    <form id="submit">
+      <input type="text" id="firstname" placeholder="firstname" />
+      <input type="text" id="lastname" placeholder="lastname" />
+      <button id="btn">submit</button>
+    </form>
+
     <script src="app.js"></script>
 </body>
 </html>
