--- a/index.html
+++ b/index.html
@@ -45,11 +45,18 @@
       </section>
     </article> -->
 
-    <form id="submit">
+    <!-- <form id="submit">
       <input type="text" id="firstname" placeholder="firstname" />
       <input type="text" id="lastname" placeholder="lastname" />
       <button id="btn">submit</button>
-    </form>
+    </form> -->
+
+    <!-- <ul id="myList">
+      <li class="js">Javascript</li>
+      <li>Python</li>
+      <li>C++</li>
+      <li>C#</li>
+    </ul> -->
 
     <script src="app.js"></script>
 </body>
