--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
       <li>C#</li>
     </ul> -->
 
+    <div>
+      <button id="btn-1">btn-1</button>
+      <button id="btn-2">btn-2</button>
+      <button id="btn-3">btn-3</button>
+      <button id="btn-4">btn-4</button>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
