--- a/index.html
+++ b/index.html
@@ -63,8 +63,13 @@
       <button id="btn-2">btn-2</button>
       <button id="btn-3">btn-3</button>
       <button id="btn-4">btn-4</button>
+      <button id="loadData">click here</button>
     </div>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="app.js"></script>
+
 </body>
 </html>
