--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       <button id="loadData">click here</button>
     </div>
 
-
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
-    <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+    <!-- <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script> -->
+    <script src="export.js" type="module"></script>
     <script src="app.js"></script>
 
 </body>
